--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@ body {
 
 h1 {
   font: 30px Arial,"Helvetica Neue",Helvetica,sans-serif;
+    text-align: center;
 }
 
 
@@ -31,12 +32,13 @@ ul#measurement-types {
 
 ul#measurement-types li {
   height: auto;
-  margin: 0 0 10px 0; padding: 0;
+  margin: 0 0 10px 120px; padding: 0;
 }
 
 ul#measurement-types li a {
   text-decoration: none;
   color: black;
+  font-weight: 600;
   display: block;
   background: white;
   padding: 16px 24px;
@@ -58,7 +60,7 @@ form label {
 }
 
 form input[type="text"] {
-  width: 80px;
+  width: 120px;
   font-size: 16px;
   line-height: 16px;
 }
